# PARI_Project

./: ..gitignore.swp  .gitignore  CMakeLists.txt  CMakeLists_pi.txt  mrs
doc/: mainpage.dox
src/: defines_common.h
src/client/: PARI.glade  c_callback_parent.c  c_callback_parent.h  c_child.c  c_child.h  c_common.c  c_common.h  c_main.c  c_parent.c  c_parent.h  client.cpp
src/server/: s_child.c  s_child.h  s_common.c  s_common.h  s_main.c  s_parent.c  s_parent.h  server.cpp
